--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div id="ui-video-editor" class="span-26">
         <!-- left pane -->
         <div id="ui-panel-video" class="span-9" data-export="true">
-          <video id="video">
+          <video id="video" autobuffer preload="auto">
             <p>Your user agent does not support the HTML5 Video element.</p> 
           </video>   
           
