Fix default tryme video

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <header>
         <div class="span-26 last">
           <img class="logo" src="img/video.png" title="Butter" alt="Butter Logo">
-          <input placeholder="Video Url" type="text" id="io-video-url" name="io-video-url" class="text ui-menu-entity" value="http://dl.dropbox.com/u/3531958/stateofhtml5.ogv"> 
+          <input placeholder="Video Url" type="text" id="io-video-url" name="io-video-url" class="text ui-menu-entity" value="http://popcornjs.org/tryme.ogv"> 
           
           <!-- http://popcornjs.org/tryme.ogv -->
 
