--- a/butter.html
+++ b/butter.html
@@ -60,6 +60,7 @@
   <div class="ui-layout-north">
   
     <div id="ui-panel-preview" class="span-17 last" data-export="true">
+    
       <div id="flickr-container" data-plugin="flickr" class="ui-plugin-pane span-6" style="height:120px;width:220px"></div>
       <div id="iframe-container" data-plugin="webpage" class="ui-plugin-pane span-6" style="height:120px;width:220px"></div>
       <div id="map-container" data-plugin="googlemap" class="ui-plugin-pane span-5 last" style="height:120px;width:210px"></div>
@@ -69,6 +70,7 @@
       <div id="wiki-container" data-plugin="wikipedia" class="ui-plugin-pane span-5 last" style="height:120px;width:210px"></div>
       <hr class="space">
       <div id="footnote-container" data-plugin="footnote" class="ui-plugin-pane span-17 last" style="height:52px;width:670px;"></div>  
+
     </div>  
   </div> 
   
@@ -98,7 +100,7 @@
       <p>Your user agent does not support the HTML5 Video element.</p> 
     </video>   
 
-    <div id="ui-video-controls" class="span-10 last">
+    <div id="ui-video-controls" class="span-9 last">
       <button>
         <span data-control="play" class="ui-icon ui-icon-play"></span>
       </button>
@@ -165,7 +167,7 @@
 
 </div> 
 
-<div class="ui-layout-north">
+<div class="ui-layout-north is-header">
   <header>
     <div class="span-26 last">
       <img class="logo" src="img/video.png" title="Butter" alt="Butter Logo">
