bullshit fucking canvas tracks having wrong positions

--- a/butter.html
+++ b/butter.html
@@ -33,7 +33,7 @@
   <script src="js/underscore.min.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/jquery-ui.min.js"></script>
-  <script src="js/jquery.ui.butter.min.js"></script>
+  <script src="js/jquery.ui.butter.js"></script>
   <script src="js/jquery.scrolling-events.js"></script>
 
 
