--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
   <div class="ui-layout-north">
   
     <div id="ui-panel-preview" class="span-17 last" data-export="true">
-    
+			<ul class="sortable">
+
+			</ul>
+    	<!--
       <div id="flickr-container" data-plugin="flickr" class="ui-plugin-pane span-6" style="height:120px;width:220px"></div>
       <div id="iframe-container" data-plugin="webpage" class="ui-plugin-pane span-6" style="height:120px;width:220px"></div>
       <div id="map-container" data-plugin="googlemap" class="ui-plugin-pane span-5 last" style="height:120px;width:210px"></div>
@@ -85,7 +88,7 @@
       <div id="wiki-container" data-plugin="wikipedia" class="ui-plugin-pane span-5 last" style="height:120px;width:210px"></div>
       <hr class="space">
       <div id="footnote-container" data-plugin="footnote" class="ui-plugin-pane span-17 last" style="height:52px;width:670px;"></div>  
-
+			-->
     </div>  
   </div> 
   
