--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
   <script src="js/layout.application.js"></script> 
 
 
+  <script src="js/butter.application.test.auto.js"></script>
+
+
 </head> 
 <body> 
 
