autosets the height on load or resize

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <h3><a href="#">Project Details</a></h3>
       <div>
         <input placeholder="Title" type="text" id="io-video-title" name="io-video-title" class="text"  style="width:388px;" value="" />
-        <!--<textarea placeholder="Description" id="io-video-description" style="width:388px;height:25px"  class="text"></textarea>-->
+        <textarea placeholder="Description" id="io-video-description" style="width:388px;height:25px"  class="text"></textarea>
         <button class="ui-menu-controls" data-control="save" >Save</button>
         <button class="ui-menu-controls" data-control="remove" >Delete</button>
       </div>
