menu button container width

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
       <!-- http://popcornjs.org/tryme.ogv -->
 
-      <button class="ui-menu-controls marginleft" data-control="load" >Create New Project</button>
+      <button class="ui-menu-controls marginleft" data-control="load" >New Project</button>
 
       <button class="ui-menuset"  data-control="">My Projects</button> 
       <ul id="ui-user-videos" class="select-ul is-menu">
