--- a/index.html
+++ b/index.html
@@ -154,18 +154,19 @@
   <div id="ui-panel-plugins" class="span-11 last">
     <div id="ui-accordion-tools" class="ui-accordion-panel">
 
-      <h3><a href="#">Project Details</a></h3>
-      <div>
-        <input placeholder="Title" type="text" id="io-video-title" name="io-video-title" class="text"  style="width:388px;" value="" />
-        <textarea placeholder="Description" id="io-video-description" style="width:388px;height:25px"  class="text"></textarea>
-        <button class="ui-menu-controls" data-control="save" >Save</button>
-        <button class="ui-menu-controls" data-control="remove" >Delete</button>
-      </div>
 
       <h3><a href="#">Add Commands</a></h3>
       <div>
         <ul id="ui-plugin-select-list" class="select-ul">
         </ul>
+      </div>
+
+      <h3><a href="#">Project Details</a></h3>
+      <div>
+        <input placeholder="Title" type="text" id="io-video-title" name="io-video-title" class="text"  style="width:388px;" value="New Project" />
+        <textarea placeholder="Description" id="io-video-description" style="width:388px;height:25px"  class="text"></textarea>
+        <button class="ui-menu-controls" data-control="save" >Save</button>
+        <button class="ui-menu-controls" data-control="remove" >Delete</button>
       </div>
 
       <h3><a href="#">Help</a></h3>
