--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <!-- Initially at bottom of document, however causes FOUC -->
 
   <!-- Popcorn plugins -->
+  <script src="http://popcornjs.org/code/dist/popcorn-complete.js"></script>
+  <!--
   <script src="popcorn-js/popcorn.js"></script>
   <script src="popcorn-js/plugins/googlemap/popcorn.googlemap.js"></script>
   <script src="popcorn-js/plugins/footnote/popcorn.footnote.js"></script>
@@ -48,6 +50,7 @@
   <script src="popcorn-js/plugins/image/popcorn.image.js"></script>
   <script src="popcorn-js/plugins/wikipedia/popcorn.wikipedia.js"></script>
   <script src="popcorn-js/plugins/twitter/popcorn.twitter.js"></script>
+  -->
 
   <!-- The juice-->
   <script src="js/butter.application.js"></script>    
